--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
@@ -17,59 +17,70 @@
   set_fact:
     database_environment: "{{ groups | select('match','.*_primarydb') | list | first | regex_replace('^(.*)_primarydb', '\\1') }}"
 
-# There is currently no DMS Functionality in the Amazon.Aws Collection
-# so we will use the AWSCLI instead
-- name: Loop through all possible database sources looking for the one the DMS endpoint is connected to
+# Define a list of endpoint types and their corresponding variable names
+- name: Set endpoint types to process
+  set_fact:
+    endpoint_types:
+      - { name: "audit-data", var_prefix: "client" }
+      - { name: "user-data", var_prefix: "repository" }
+
+# Loop through endpoint types to find endpoints dynamically
+- name: Loop through all possible database sources for each endpoint type
+  vars:
+    endpoint_id: "{{ simple_environment_name }}-{{ item.name }}-from-{{ db_item.source_db | lower }}"
   shell: |
     aws dms describe-endpoints \
-    --filters Name=endpoint-type,Values=source Name=endpoint-id,Values={{ simple_environment_name }}-audit-data-from-{{ item.source_db | lower }} \
+    --filters Name=endpoint-type,Values=source Name=endpoint-id,Values={{ endpoint_id }} \
     --query "Endpoints[].EndpointArn" --region {{ region }} --output text || true
-  register: get_source_endpoint
+  register: endpoint_results
   changed_when: false
-  loop:
-    - source_host: "{{ database_environment + '_primarydb' }}"
-      source_db: "{{ hostvars[groups[database_environment + '_primarydb'][0]]['database_primary_sid'] }}"
-    - source_host: "{{ database_environment + '_standbydb1' if (groups[database_environment + '_standbydb1'] is defined) else 'NONE' }}"
-      source_db: "{{ hostvars[groups[database_environment + '_standbydb1'][0]]['database_standby_sid'] if (groups[database_environment + '_standbydb1'] is defined) else 'NONE' }}"
-    - source_host: "{{ database_environment + '_standbydb2' if (groups[database_environment + '_standbydb2'] is defined) else 'NONE' }}"
-      source_db: "{{ hostvars[groups[database_environment + '_standbydb2'][0]]['database_standby_sid'] if (groups[database_environment + '_standbydb2'] is defined) else 'NONE' }}"
+  loop: "{{ endpoint_types | subelements('db_sources') }}"
+  loop_control:
+    label: "{{ item.0.name }}:{{ item.1.source_db }}"
+  vars:
+    db_sources:
+      - source_host: "{{ database_environment + '_primarydb' }}"
+        source_db: "{{ hostvars[groups[database_environment + '_primarydb'][0]]['database_primary_sid'] }}"
+      - source_host: "{{ database_environment + '_standbydb1' if (groups[database_environment + '_standbydb1'] is defined) else 'NONE' }}"
+        source_db: "{{ hostvars[groups[database_environment + '_standbydb1'][0]]['database_standby_sid'] if (groups[database_environment + '_standbydb1'] is defined) else 'NONE' }}"
+      - source_host: "{{ database_environment + '_standbydb2' if (groups[database_environment + '_standbydb2'] is defined) else 'NONE' }}"
+        source_db: "{{ hostvars[groups[database_environment + '_standbydb2'][0]]['database_standby_sid'] if (groups[database_environment + '_standbydb2'] is defined) else 'NONE' }}"
 
-- name: Show Endpoints
-  debug:
-    var: get_source_endpoint
-
-- name: Get Source Endpoint and Host Associated with the Client Environment
+# Set facts for the first non-empty endpoint found for each type
+- name: Set facts for found endpoints
   set_fact:
-    source_endpoint: "{{ item.stdout }}"
-    source_endpoint_host: "{{ item.item.source_host }}"
-  loop: "{{ get_source_endpoint.results }}"
-  when: item.stdout != ""
-  register: first_non_empty_result
-  until: first_non_empty_result is succeeded
+    "{{ item.0.var_prefix }}_source_endpoint": "{{ item.1.stdout }}"
+    "{{ item.0.var_prefix }}_source_endpoint_host": "{{ item.1.item.source_host }}"
+  loop: "{{ endpoint_types | product(endpoint_results.results) | list }}"
+  when: item.1.item.0.name == item.0.name and item.1.stdout != ""
+  loop_control:
+    label: "{{ item.0.name }}"
 
-# If we do not find a Source DMS Endpoint for the supplied *client* environment then
+# Show found endpoints for debugging
+- name: Show found endpoints
+  debug:
+    msg:
+      - "Client Source Endpoint: {{ client_source_endpoint | default('Not found') }}"
+      - "Client Source Endpoint Host: {{ client_source_endpoint_host | default('Not found') }}"
+      - "Repository Source Endpoint: {{ repository_source_endpoint | default('Not found') }}"
+      - "Repository Source Endpoint Host: {{ repository_source_endpoint_host | default('Not found') }}"
+
+
+# If we do not find a Source DMS Endpoint for the supplied environment then
 # we skip all tasks associated with Audited Interaction preservation tasks as it
 # has not been configured for this environment.
 - name: Skip Message
   debug:
-    msg: "This environment is not configured as an Audited Interaction data client.  No action taken."
-  when: source_endpoint | default() == ''
+    msg: "This environment is not configured as an Audited Interaction data client or repository.  No action taken."
+  when: 
+    - client_source_endpoint | default() == ''
+    - repository_source_endpoint | default() == ''
 
 - name: Perform Requested Actions on Replication Tasks
-  when: source_endpoint | default() != ''
+  when: client_source_endpoint | default() != '' or repository_source_endpoint | default() != ''
   block:
-    - debug:
-        msg: "Source Endpoint ARN: {{ source_endpoint }}"
-
-    - name: Set Flag that this is Audited Interaction Preservation Client
-      set_fact:
-        audited_interaction_client: true
-
-    - name: Get Details of Replication Tasks from Client to Repository
-      include_tasks: get_outbound_task_details.yml
-
-    - name: Get Details of Replication Tasks from Repository to Client
-      include_tasks: get_inbound_task_details.yml
+    - name: Get Details of Replication Tasks
+      include_tasks: get_task_details.yml
 
     - name: Wait for Audit Replication to Finish
       include_tasks: wait_for_zero_throughput.yml
