--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/resume_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/resume_tasks.yml
@@ -2,6 +2,7 @@
 # is reference data it is possible to do a full reload of the data and start from that point
 - name: Restart Business Interaction Replication Task
   include_tasks: restart_business_interaction_task.yml
+  when: business_interaction_task_arn is defined
 
 # We do not need to wait for the Audited Interaction Checksum Replication to start as the main
 # Audited Interaction data replication is not dependent on it
@@ -9,14 +10,19 @@
   shell: |
     aws dms start-replication-task --replication-task-arn "{{ audited_interaction_checksum_task_arn }}" \
         --region {{ region }}  --start-replication-task-type resume-processing
+  when: audited_interaction_checksum_task_arn is defined
 
 - name: Resume the User and Probation Area DMS CDC Replication Tasks
   shell: |
     aws dms start-replication-task --replication-task-arn "{{ user__task_arn }}" \
         --region {{ region }}  --start-replication-task-type resume-processing
+  when: user__task_arn is defined
 
 - name: Resume the Audited Interaction DMS CDC Replication Tasks
   shell: |
     aws dms start-replication-task --replication-task-arn "{{ audited_interaction_task_arn }}" \
         --region {{ region }}  --start-replication-task-type resume-processing
-  when: audit_cdc_scn | default('') == ''
+  when: 
+     - audit_cdc_scn | default('') == ''
+     - audited_interaction_task_arn is defined
+
