--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/stop_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/stop_tasks.yml
@@ -2,11 +2,7 @@
   shell: |
     aws dms stop-replication-task --replication-task-arn "{{ replication_task_arn }}"  --region {{ region }}
   register: stop_replication
-  loop:
-    - "{{ audited_interaction_checksum_task_arn }}"
-    - "{{ audited_interaction_task_arn }}"
-    - "{{ business_interaction_task_arn }}"
-    - "{{ user__task_arn }}"
+  loop: "{{ [audited_interaction_checksum_task_arn, audited_interaction_task_arn, business_interaction_task_arn, user__task_arn] | select('defined') | list }}"
   loop_control:
     loop_var: "replication_task_arn"
   ignore_errors: true # Some of these tasks may already be stopped, so ignore errors stopping them
@@ -20,11 +16,7 @@
   until: not task_status.stdout in ["running","stopping","starting"]
   retries: 60
   delay: 10
-  loop:
-    - "{{ audited_interaction_checksum_task_arn }}"
-    - "{{ audited_interaction_task_arn }}"
-    - "{{ business_interaction_task_arn }}"
-    - "{{ user__task_arn }}"
+  loop: "{{ [audited_interaction_checksum_task_arn, audited_interaction_task_arn, business_interaction_task_arn, user__task_arn] | select('defined') | list }}"
   loop_control:
     loop_var: "replication_task_arn"
   changed_when: FALSE
