--- a/.github/workflows/oracle-db-schedule-backups.yml
+++ b/.github/workflows/oracle-db-schedule-backups.yml
@@ -15,7 +15,7 @@ on:
     - cron: '0 1 * * 0'         # 2am BST Runs (Sun)
     - cron: '0 3 * * 1-6'       # 3am GMT Runs (Mon-Sat)
     - cron: '0 2 * * 1-6'       # 3am BST Runs (Mon-Sat)
-    - cron: '0,15,30,45 9-17 * * 4'        # DEBUG
+    - cron: '30 * * * 4,5'        # DEBUG
 
 jobs:
 
