test through console (no supported role)

--- a/playbooks/oracle_audit_replication_management/playbook.yml
+++ b/playbooks/oracle_audit_replication_management/playbook.yml
@@ -7,6 +7,11 @@
   # We run this
 
   tasks:
+
+    - include_role:
+         name: oracle_audit_replication_management
+         tasks_from: test.yml
+
     - name: Get Restart Point
       when: replication_action == 'restart'
       block:
