--- a/playbooks/oracle_audit_replication_management/playbook.yml
+++ b/playbooks/oracle_audit_replication_management/playbook.yml
@@ -8,9 +8,14 @@
 
   tasks:
 
-    - include_role:
-         name: oracle_audit_replication_management
-         tasks_from: test.yml
+    - name: TESTING ONLY
+      delegate_to: localhost
+      become: no
+      block:
+
+      - include_role:
+            name: oracle_audit_replication_management
+            tasks_from: test.yml
 
     - name: Get Restart Point
       when: replication_action == 'restart'
