Convert list of dicts to dict

--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/test.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/test.yml
@@ -45,9 +45,10 @@
     set_fact:
        client_source_endpoint: "{{ endpoint_results.results 
                                    | selectattr('stderr','equalto','') 
-                                   | selectattr('item.direction','equalto','from')
-                                   | selectattr('item.name','equalto','audit-data')
                                    | map(attribute='item')
+                                   | map('items2dict')
+                                   | selectattr('direction','equalto','from')
+                                   | selectattr('name','equalto','audit-data')
                                    | map(attribute='source_host')
                                    | list
                                    }}"
