--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/test.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/test.yml
@@ -41,6 +41,28 @@
   - debug:
       var: endpoint_results
 
+  - name: Initialise collector
+    set_fact:
+      source_hosts: []
+
+  - name: Collect source_host when stderr == "" and item.direction == "from" and item.name == "audit-data"
+    set_fact:
+      source_hosts: "{{ source_hosts + [ merged.source_host ] }}"
+    vars:
+      merged: "{{ {} | combine(*item.item) }}"
+    when:
+      - item.stderr == ''
+      - (merged.direction | default('')) == 'from'
+      - (merged.name | default('')) == 'audit-data'
+      - (merged.source_host | default('')) != ''
+    loop: "{{ endpoint_results.results }}"
+    loop_control:
+      label: "{{ item.item }}"
+      
+  - debug:
+      var: source_hosts
+
+
   - name: Get the Client Endpoints
     set_fact:
        client_source_endpoint: "{{ endpoint_results.results 
