Get source and target ARNs

--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/get_task_details.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/get_task_details.yml
@@ -1,3 +1,6 @@
+#  THIS PLAY IS OBSOLETE!!!!
+
+
 - name: Get ARN for Audited Interaction Replication Task
   shell: |
     aws dms describe-replication-tasks --region {{ region }}  | \
