Missing block start

--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
@@ -2,6 +2,7 @@
 # redo logs available on the host to cover the perido since the start SCN
 - name: Restore Archivelogs
   when: audited_interaction_client
+  block:
 
   - name: Get Host where Source Database is running
     include_tasks: find_audit_source_host.yml
