--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/find_audit_source_host.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/find_audit_source_host.yml
@@ -23,7 +23,10 @@
     loop: "{{ db_sources }}"
     changed_when: false
 
+  - debug:
+       var: endpoint_results
+
   - name: Get the Name of the Source Host for Audited Interaction Data
     set_fact:
-       audit_source_host: "{{ endpoint_results | rejectattr('stdout','equalto','') | map(attribute='item') | map(attribute='source_host') | list | first }}"
+       audit_source_host: "{{ endpoint_results.results | rejectattr('stdout','equalto','') | map(attribute='item') | map(attribute='source_host') | list | first }}"
 
