Use correct variable name

--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/find_audit_source_host.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/find_audit_source_host.yml
@@ -30,3 +30,5 @@
     set_fact:
        audit_source_host: "{{ endpoint_results.results | rejectattr('stdout','equalto','') | map(attribute='item') | map(attribute='source_host') | list | first }}"
 
+  - debug:
+       var: audit_source_host
