--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
@@ -38,11 +38,20 @@
        --start-replication-task-type start-replication
   when: not audited_interaction_client
 
-- name: Restart the Repository Side Audited Interaction Checksum DMS CDC Replication Tasks
+- name: Restart the Client Side Audited Interaction DMS CDC Replication Tasks from Requested Time
   shell: |
-    aws dms start-replication-task --replication-task-arn "{{ audited_interaction_checksum_task_arn }}" \
+    aws dms start-replication-task --replication-task-arn "{{ audited_interaction_task_arn }}" \
+       --cdc-start-position "{{ audit_cdc_scn }}"  --region {{ region }}  \
+       --start-replication-task-type start-replication
+  when: audited_interaction_client
+
+# The repository does not need an SCN for a restart since it is reading from S3
+- name: Restart the Repository Side Audited Interaction DMS CDC Replication Tasks from S3
+  shell: |
+    aws dms start-replication-task --replication-task-arn "{{ audited_interaction_task_arn }}" \
        --region {{ region }}  \
        --start-replication-task-type start-replication
+  when: not audited_interaction_client
 
 # We cannot supply a lower bound for User and Probation Area replication since we have to use
 # an S3 bucket for staging between Mod Platform environments, and Start Positions may not
