Is Client needs to check STDOUT

--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/get_task_details.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/get_task_details.yml
@@ -10,7 +10,7 @@
 
 - set_fact:
      audited_interaction_client: true
-  when: is_client != ''
+  when: is_client.stdout != ''
 
 - name: Get ARN for Audited Interaction Replication Task
   shell: |
