--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/is_audit_client.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/is_audit_client.yml
@@ -9,50 +9,4 @@
   changed_when: false
 
 - set_fact:
-     audited_interaction_client: true
-  when: is_client.stdout != ''
-
-- name: Get ARN for Audited Interaction Replication Task
-  shell: |
-    aws dms describe-replication-tasks --region {{ region }}  | \  
-       jq -r '.ReplicationTasks[] | select(.ReplicationTaskIdentifier | test("-audited-interaction-(inbound|outbound)-")) | .ReplicationTaskArn'
-  register: get_audited_interaction_task_arn
-  delegate_to: localhost
-  changed_when: false
-
-- set_fact:
-    audited_interaction_task_arn: "{{ get_audited_interaction_task_arn.stdout }}"
-
-- debug:
-    msg: "Audited Interaction Task ARN: {{ audited_interaction_task_arn }}"
-
-- name: Get ARN for Business Interaction Replication Task
-  shell: |
-    aws dms describe-replication-tasks --region {{ region }}  | \
-        jq -r '.ReplicationTasks[] | select(.ReplicationTaskIdentifier | test("-business-interaction-(inbound|outbound)-")) | .ReplicationTaskArn'
-  register: get_business_interaction_task_arn
-  delegate_to: localhost
-  changed_when: false
-
-- set_fact:
-    business_interaction_task_arn: "{{ get_business_interaction_task_arn.stdout }}"
-
-- name: Get ARN for Audited Interaction Checksum Replication Task
-  shell: |
-    aws dms describe-replication-tasks --region {{ region }}  | \
-       jq -r '.ReplicationTasks[] | select(.ReplicationTaskIdentifier | test("-audited-interaction-checksum-(inbound|outbound)-")) | .ReplicationTaskArn'
-  register: get_audited_interaction_checksum_task_arn
-  changed_when: false
-
-- set_fact:
-    audited_interaction_checksum_task_arn: "{{ get_audited_interaction_checksum_task_arn.stdout }}"
-
-- name: Get ARN for User Replication Task
-  shell: |
-    aws dms describe-replication-tasks  --region {{ region }}  | \
-       jq -r '.ReplicationTasks[] | select(.ReplicationTaskIdentifier | test("-user-(inbound|outbound)-")) | .ReplicationTaskArn'
-  register: get_user__task_arn
-  changed_when: false
-
-- set_fact:
-    user__task_arn: "{{ get_user__task_arn.stdout }}"
+     audited_interaction_client: "{{ true if (is_client.stdout != '') else false }}"
